--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,12 @@
         android:theme="@style/Theme.PedAssistant"
         tools:targetApi="31">
         <activity
+            android:name=".SelectedStudentActivity"
+            android:exported="false" />
+        <activity
+            android:name=".YarullinActivity"
+            android:exported="false" />
+        <activity
             android:name=".SelectedGroupActivity"
             android:exported="false" />
         <activity
